<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_title"
                android:text="@string/title_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="26dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_date"
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp" />

            <TextView
                android:id="@+id/txt_date"
                android:text="date_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:text="Run Time"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="26dp"/>

            <TextView
                android:text="Rating"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:text="Director"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="26dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_runTime"
                android:text="@string/runTime"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_marginLeft="26dp"/>

            <TextView
                android:id="@+id/txt_rating"
                android:text="@string/rating"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_director"
                android:text="@string/director"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_marginRight="26dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="26dp"
                android:text="Status"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:text="Original Language"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="26dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_status"
                android:text="@string/status"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_marginLeft="26dp"/>

            <TextView
                android:id="@+id/txt_language"
                android:text="@string/language"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/txt_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:justificationMode="inter_word"
                android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Budget"
                    android:layout_marginLeft="26dp"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Revanue"
                    android:layout_marginLeft="26dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Genres"
                    android:layout_marginLeft="26dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/txt_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txt_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revanue"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/txt_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/genres"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
